5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1590_825.log
== TEST (2019-04-01 13:19:03) 
-- CODE:
from math import*
r=float(input()) #raio
A=pi*(r*0.5)
V=4*pi*(r*0.5*)r*1/3
print(round(A,3))
print(round(V,3))
-- ERROR:
File "XXXX", line 4
    V=4*pi*(r*0.5*)r*1/3
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:19:31) 
-- CODE:
from math import*
r=float(input()) #raio
A=pi*(r*0.5)
V=4*pi*r*r*r*1/3
print(round(A,3))
print(round(V,3))
-- OUTPUT:
7.069
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:19:55) 
-- CODE:
from math import*
r=float(input()) #raio
A=pi*r*r
V=4*pi*r*r*r*1/3
print(round(A,3))
print(round(V,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:20:06) 
-- CODE:
from math import*
r=float(input()) #raio
A=pi*r*r
V=4*pi*r*r*r*1/3
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME:
0.158106
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:21:32) 
-- CODE:
from math import*
r=float(input()) #raio
A=pi*r*r
V=4*pi*r*r*r*1/3
print(round(A,3))
print(round(V,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
